--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sentry/nextjs": "^8.9.2",
+    "@sentry/nextjs": "^8.44.0",
+    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.17.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -38,9 +39,10 @@
     "react": "^18",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.3",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.51.4",
     "react-phone-number-input": "^3.4.1",
+    "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.0.4",
