--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "next/typescript"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   }
