--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.3",
     "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
